--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 .app{
     width: 100%;
     height: 100vh;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .navbar{
@@ -82,9 +82,7 @@
 
 .footer {
     background-color: black;
-    position: fixed;
-    bottom: 0;
-    left: 0;
+ 
     width: 100%;
     padding: 20px;
     align-items: center;
