--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,9 @@
 
 .footer {
     background-color: black;
- 
+ position: fixed;
+ left: 0;
+ bottom: 0;
     width: 100%;
     padding: 20px;
     align-items: center;
@@ -155,6 +157,18 @@ width: 600px;
     width: 100%;
     justify-content: space-around;
     padding: 15px;
+}
+
+@media screen and (max-width: 1100px) {
+
+    .mainCont{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+      
+        padding: 15px;
+    }
+
 }
 
 .rec{
